prusti-tests/tests/verify/ui/predicates/abstract-predicate-with-body.stderr
error: [Prusti: invalid specification] abstract predicates must not have bodies
 --> $DIR/abstract-predicate-with-body.rs:5:9
  |
5 |         fn foo(&self) -> bool {
  |         ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

