prusti-tests/tests/verify/ui/predicates/abstract-predicate-with-body.rs
use prusti_contracts::*;

trait MyTrait {
    predicate! {
        fn foo(&self) -> bool {
            true
        }
    }
}

fn main() {
}
